text-style file

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -20,6 +20,11 @@ body{
     height: 100vh;
     font-size: 16px;
     line-height: 24px;
+
+    &.js-hidden{
+        position: relative;
+        overflow: hidden;
+    }
 }
 header{
     /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
@@ -349,6 +354,8 @@ button{
         position: static;
     }
     &__title{
+        position: relative;
+        z-index: 20;
         font-weight: 900;
         font-size: 40px;
         line-height: 55px;
@@ -377,26 +384,56 @@ button{
         }
     }
     &__slider-item{
+        position:relative;
+
         padding: 240px 200px 249px;
         
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         min-height: 834px;
+        display: flex !important;
+        justify-content: center;
+        flex-direction: column;
+        &:before{
+            content: '';
+            background: linear-gradient(0deg, rgba(19,22,21,1) 0%, rgba(19,22,21,0) 100%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 400px;
+            transform: rotate(180deg);
+            @include for-md{
+                height: 50%;
+            }
+        }
+        &:after{
+            content: '';
+            background: linear-gradient(0deg, rgba(19,22,21,1) 0%, rgba(19,22,21,0) 100%);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 400px;
+            @include for-md{
+                height: 50%;
+            }
+            
+        }
         @include for-md{
             min-height: 0;
-            padding: 70px 0 100px;
+            padding: 50px 40px;
             min-height: 439px;
         }
         @include for-sm{
-            padding: 50px 0 70px;
+            padding: 50px 20px;
         }
-        @include for-md-mob{
-            min-height: 287px;
-            padding: 20px 0 60px;
-        }
+     
     }
     &__text{
+        position: relative;
+        z-index: 20;
         margin-top: 30px;
         font-weight: 500;
         font-size: 24px;
@@ -422,6 +459,7 @@ button{
     }
     &__button{
         position: relative;
+        z-index: 20;
         display: block;
         padding: 24px 0;
         max-width: 295px;
@@ -484,6 +522,18 @@ button{
     display: flex;
     justify-content: center;
     max-width: 630px;
+    &__container{
+        @include for-md(){
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            box-sizing: border-box;
+            padding: 20px;
+            
+        }
+    }
     &--mobile{
         position: absolute;
         left: 50%;
@@ -491,16 +541,17 @@ button{
         width: 100%;
         top: 40px;
         z-index: 12;
+        overflow: auto;
         @include for-md{
             display: none;
-            padding: 20px; 
+            padding: 0; 
             flex-direction: column;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             top: 0;
             left: 0;
             background-color: $white;
-            border-bottom: 2px solid $blue;
+        
             transform: none;
             max-width: 100%;
         }
@@ -630,7 +681,7 @@ button{
                 padding-top: 70px;
             }
             @include for-sm{
-                padding-top: 30px;
+                padding-top: 50px;
             }
             
         }
@@ -651,10 +702,10 @@ button{
             padding: 70px 25px 50px;
         }
         @include for-sm{
-            padding: 30px 25px;
+            padding: 50px 25px;
         }
         @include for-md-mob{
-            padding: 30px 15px;
+            padding: 50px 15px;
         }
 
     }
@@ -709,8 +760,8 @@ button{
             height: 1px;
             background-color: #bdbdbd;
             top: 13px;
-            @include for-md-mob{
-                top: 5px;
+            @include for-md{
+                top: 10px;
                 left: 0;
             }
             
@@ -792,10 +843,10 @@ button{
                 font-size: 16px;
                 line-height: 18px;
             }
-            @include for-md-mob{
-                font-size: 12px;
-                line-height: 14px;
-            }
+            // @include for-md-mob{
+            //     font-size: 12px;
+            //     line-height: 14px;
+            // }
         }
         @include for-md{ 
             height: 56px; 
@@ -812,8 +863,8 @@ button{
             height: auto;
             margin-bottom: 10px;
             text-align: center;
-            font-size: 10px;
-            line-height: 12px;
+            // font-size: 10px;
+            // line-height: 12px;
         }
         
     }
@@ -997,7 +1048,7 @@ button{
         padding: 50px 0 20px;
     }
     @include for-sm{
-        padding: 30px 0 20px;
+        padding: 50px 0;
     }
     &__title{
         text-align: center;
@@ -1048,7 +1099,7 @@ button{
     }
     &__item{
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         &:hover{
             .why-we__link{
                 color: $blue;
@@ -1057,7 +1108,7 @@ button{
     }
     
     &__img-block{
-        margin-right: 38px;
+        margin-right: 10px;
         width: 61px;
         max-height: 61px;
         flex-shrink: 0;
@@ -1118,7 +1169,7 @@ button{
             padding: 50px 25px 100px;
         }
         @include for-sm{
-            padding: 30px 15px 50px;
+            padding: 50px 15px 50px;
         }
     }
     &__title{
@@ -1315,8 +1366,11 @@ button{
         max-width: 185px;
     }
     &__img{
-        max-width: 185px;
         margin: 0 auto;
+        display: block;
+        height: 100%;
+        width: 100%;
+        // object-fit: contain;
     }
 }
 .about-reviews{
@@ -1350,11 +1404,15 @@ button{
         display: block !important;
         margin: 0 auto;
         max-width: 185px;
+        border: 1px solid #bdbdbd;
+        box-sizing: border-box;
     }
     &__img{
-        max-width: 185px;
         margin: 0 auto;
-        border: 1px solid #bdbdbd;
+        display: block;
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
     }
 }
 .about-arrows{
@@ -1400,11 +1458,9 @@ button{
     padding: 94px 0 100px;
     background-color: #f7f7f7;
     @include for-md{
-        padding: 50px 0 70px;
+        padding: 50px 0;
     }
-    @include for-sm{
-        padding: 30px 0 50px;
-    }
+
     &__inner{
         position: relative;
     }
@@ -1431,6 +1487,11 @@ button{
         &:hover{
             filter: grayscale(100%);
         }
+    }
+    &__slider-img{
+        display: block;
+        max-width: 100%;
+       
     }
     .swiper-container{
         padding-top: 1px;
@@ -1459,14 +1520,12 @@ button{
     background-size: cover;
     background-repeat: no-repeat;
     @include for-md{
-        padding: 70px 0 100px;
+        padding: 70px 0;
     }
     @include for-sm{
-        padding: 50px 0 70px;
+        padding: 50px 0;
     }
-    @include for-md-mob{
-        padding: 20px 0 30px;
-    }
+
     &__inner{
         text-align: center;
     }
@@ -1729,6 +1788,11 @@ button{
     @include for-md{
         padding: 0 20px;
     }
+    .menu{
+        li{
+            margin: 2px;
+        }
+    }
     &__header{
         padding: 57px 0 54px;
         display: flex;
@@ -1797,18 +1861,16 @@ button{
         max-width: 1407px;
         flex-wrap: wrap;
         @include for-md{
-            padding: 30px 0;
+            padding: 0;
             flex-direction: column;
             text-align: center;
         }
         
     }
     
-    &__bottom-list{
-        @include for-md{
-            display: none;
-        }
-    }
+    // &__bottom-list{
+       
+    // }
 
     &__bottom-item{
         margin-right: 83px;
@@ -1821,6 +1883,7 @@ button{
         }
         @include for-md-mob{
             margin-top: 10px;
+            margin-bottom: 0;
         }
        
         &--mlauto{
@@ -1865,6 +1928,7 @@ button{
         color: $blue;
         @include for-md{
             cursor: pointer;
+            margin-bottom: 5px;
         }
     }
     &__bottom-list-item + &__bottom-list-item{
@@ -2069,8 +2133,8 @@ button{
             height: 1px;
             background-color: #bdbdbd;
             top: 13px;
-            @include for-md-mob{
-                top: 5px;
+            @include for-md{
+                top: 9px;
             }
             
         }           
@@ -2153,10 +2217,10 @@ button{
                 font-size: 16px;
                 line-height: 18px;
             }
-            @include for-md-mob{
-                font-size: 12px;
-                line-height: 14px;
-            }
+            // @include for-md-mob{
+            //     font-size: 12px;
+            //     line-height: 14px;
+            // }
         }
         @include for-md{ 
                     
@@ -2172,8 +2236,8 @@ button{
             height: auto;
             margin-bottom: 10px;
             text-align: center;
-            font-size: 10px;
-            line-height: 12px;
+            // font-size: 10px;
+            // line-height: 12px;
         }
         
     }
@@ -2493,7 +2557,7 @@ button{
         }
     }
     &__link-map{
-        margin-top: 20px;
+
         padding-right: 18px;
         position: relative;
         display: inline-block;
@@ -2521,12 +2585,12 @@ button{
                 transform: translate(10px,-50% );
             }
         }
-        @include for-md{
-            margin-top: 20px;
-        }
-        @include for-md-mob{
-            margin-top: 15px;
-        }
+        // @include for-md{
+        //     margin-top: 20px;
+        // }
+        // @include for-md-mob{
+        //     margin-top: 15px;
+        // }
         
     }
     &__social{
@@ -2534,11 +2598,11 @@ button{
         
         margin-top: 20px;
         @include for-md{
-            margin-top: 30px;
+            margin-top: 40px;
         }
-        @include for-md-mob{
-            margin-top: 15px;
-        }
+        // @include for-md-mob{
+        //     margin-top: 15px;
+        // }
     }
     &__social-item{
         display: flex;
@@ -2720,11 +2784,11 @@ button{
             padding: 50px 25px 60px;
         }
         @include for-sm{
-            padding: 30px 15px 50px;
+            padding: 50px 15px;
         }
-        @include for-md-mob{
-            padding-bottom: 20px;
-        }
+        // @include for-md-mob{
+        //     padding-bottom: 20px;
+        // }
     }
     &__slider{
         position: relative;
@@ -2749,22 +2813,11 @@ button{
     // }
    
     &__text-block{
-        margin-top: 55px;
+        // margin-top: 55px;
         font-weight: 500;
         font-size: 14px;
         line-height: 24px;
-        @include for-md{
-            margin-top: 30px;
-        }
-        @include for-md-mob{
-            margin-top: 15px;
-        }
-        // p{
-        //     margin-top: 36px;
-        //     @include for-md-mob{
-        //         margin-top: 20px;
-        //     }
-        // }
+        
         a{
             font-weight: 700;
             color: $blue;
@@ -2982,6 +3035,7 @@ button{
     }
     &__slider-down-block{
         position: static;
+        margin: 0 -10px;
     }
     &__slider-down-img-block{
         max-width: 400px;
@@ -3090,6 +3144,10 @@ button{
     }
 }
 .slider-down{
+    .slick-slide{
+        box-sizing: border-box;
+        padding: 10px;
+    }
     &__inner{
         position: relative;
         margin-top: 109px;
